# vibe-astro-stuff

./: .gitignore  CLAUDE.md  Makefile  pyproject.toml
.claude/: settings.local.json
src/astro_stuff/: __init__.py  iss_transit.py
tests/: test_cli.py  test_data.py
